<resources>
    <string name="app_name">Shovler</string>

    <!--Fcaebook App Id-->
    <!--<string name="fb_login_protocol_scheme">1517464908550521</string>-->
    <!--<string name="fb_login_protocol_scheme">1550509745252386</string>-->
    <!--Account ID is generated from shovler.developer@gmail.com Facebook account -->
    <string name="fb_login_protocol_scheme">276247372776305</string>
    <!--<string name="fb_login_protocol_scheme">686714378159210</string>-->
    <!--<string name="fb_login_protocol_scheme">1550509745252386</string>-->
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBhtWDdfv-iM6tMYNOw8fKtVCBxfepI8Fc</string>-->
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDpo2CLkvGzU79O2WNmv6t16b4fQaISE4o</string>-->
    <!--API key is generated from shovler.developer@gmail.com-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCtiLtnCFeToWiAGLVmuQfPYU6xI5HjfOI</string>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB0CXnLP0h7Od4G9MztroKsX-pQXmDkzQ01</string>-->
    <!--Login Activity-->
    <string name="social_net">SIGN IN WITH A SOCIAL NETWORK</string>
    <string name="dol">$</string>

    <string name="mail">Email*</string>
    <string name="code">Verification Code</string>
    <string name="mail1">Email</string>
    <string name="pass">Password</string>
    <string name="start_shovling">Log In</string>
    <string name="sign_in">LOGIN WITH EMAIL</string>
    <string name="no_acc">I don\'t have an account</string>
    <string name="fogot_pass">Forgot password?</string>

    <!--SignUp Activity-->
    <string name="set_pass">Set password*</string>
    <string name="conf_pass">Confirm password*</string>
    <string name="conti">Sign Up</string>
    <string name="comp">COMPLETE</string>
    <string name="crash">Crash</string>
    <string name="social_net_signup">SIGN UP WITH A SOCIAL NETWORK</string>
    <string name="sign_up">SIGN UP WITH EMAIL</string>
    <string name="already_acc">I already have an account</string>
    <string name="fname">First Name*</string>
    <string name="lname">Last Name*</string>
    <string name="ur_mail">Your mail</string>
    <string name="address">Enter address(Optional)</string>
    <string name="zipcode">Enter zipcode</string>
    <string name="mob_no">Enter Mobile Number</string>

    <!--Forget Password-->

    <string name="forget_pass">FORGOT PASSWORD</string>
    <string name="send_pass">SEND PASSWORD</string>
    <string name="remember_pass">I remember my password</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome_shoveler">WelcomeShovelerActivity</string>

    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>


    <!-- Alerts -->

    <!--Sign Up and Login Form Alerts-->
    <string name="all_fields">All fields are mandatory</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_model">Please enter model</string>
    <string name="enter_valid_model">Please enter valid model</string>
    <string name="enter_state">Please enter state name</string>
    <string name="enter_valid_state">Please enter valid state name</string>
    <string name="enter_plate">Please enter License plate number</string>
    <string name="enter_size">Please enter the size of the work before proceeding.</string>
    <string name="enter_valid_size">Size should be less than 1000</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_fname">Please enter first name</string>
    <string name="enter_lname">Please enter first name</string>
    <string name="enter_pass">Password must be of minimum 8 characters</string>
    <string name="enter_valid_pass">Please enter valid password</string>
    <string name="enter_conf_pass">Please enter confirm password</string>
    <string name="same_pass">Password and confirm password entries should be same</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_search_dist">Please enter range in miles</string>
    <string name="enter_mobile">Please enter mobile number</string>
    <string name="enter_zipcode">Please enter zipcode</string>
    <string name="enter_arrival">Please enter arrive time</string>

    <string name="enter_card">Please enter valid Card Number</string>
    <string name="enter_card1">Please enter valid Data</string>
    <string name="enter_month">Please enter Month</string>
    <string name="enter_Year">Please enter Year</string>
    <string name="enter_CVC">Please enter CVC</string>


    <!--<string name="wents_wrong">Something went\'s wrong from server</string>-->
    <string name="wents_wrong">Sorry. Something went wrong from the server. Please try again or contact admin@shovler.com</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="loading">Loading...</string>

    <!--Success message-->
    <string name="update_successfully">Record updated successfully</string>
    <string name="please_login">Please log in as a Requester or Shoveler to access</string>


</resources>
