<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.app.shovlerapp.activity.SignUpActivity2">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/fname"
        android:background="@color/white_trans"
        android:textColor="@color/white"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/ur_mail"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:background="@color/white_trans"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
    <EditText
        android:id="@+id/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/mob_no"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:inputType="textPostalAddress"
        android:background="@color/white_trans"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
    <EditText
        android:id="@+id/add_location"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/address"
        android:imeOptions="actionDone|actionNext"
        android:inputType="textPostalAddress"
        android:background="@color/white_trans"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
    <EditText
        android:id="@+id/zipcode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/zipcode"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:background="@color/white_trans"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
</LinearLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/start_shovling"
        android:hint="@string/comp"
        android:textColorHint="@color/white" />
</RelativeLayout>
