<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.shovlerapp.activity.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="SIGN UP"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_color" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_up_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_color"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/fname"
                    android:imeOptions="actionNext"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/lname"
                    android:imeOptions="actionNext"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/set_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/set_pass"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/set_conf_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/conf_pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <EditText
                    android:id="@+id/mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/mob_no"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/add_location"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/address"
                    android:imeOptions="actionDone|actionNext"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />
                <CheckBox
                    android:id="@+id/terms_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="8dp"
                    android:text=""
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/conti"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/start_shovling"
                    android:hint="@string/conti"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/already_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_border"
                    android:padding="8dp"
                    android:text="@string/already_acc"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="10dp" />




            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
