<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

           <LinearLayout
               android:layout_above="@+id/layout"
               android:layout_alignParentTop="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center">
            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:paddingLeft="4dp"
                android:src="@drawable/logo" />
           </LinearLayout>
            <LinearLayout
                android:id="@+id/layout"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_in_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_in"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_color" />

                <EditText
                    android:id="@+id/email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/mail1"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/pass_ed"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/white_trans"
                    android:hint="@string/pass"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Role :"
                        android:textColor="@color/white" />

                    <RadioGroup
                        android:id="@+id/radio_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/requester_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:checked="true"
                            android:editable="false"
                            android:clickable="false"
                            android:text="Requester"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/shoveler_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="Shoveler"
                            android:editable="false"
                            android:clickable="false"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/start_shoveling"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/start_shovling"
                    android:hint="@string/start_shovling"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <Button
                        android:id="@+id/sigup"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:text="@string/no_acc"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color"
                        android:textSize="10dp" />

                    <Button
                        android:id="@+id/forget_pass"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:text="@string/fogot_pass"
                        android:textAllCaps="false"
                        android:textColor="@color/text_color"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
