<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.app.shovlerapp.activity.ForgetActivity">
    <ScrollView
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:src="@drawable/logo" />



            <TextView
                android:id="@+id/forget_pass_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forget_pass"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:hint="@string/mail"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:background="@color/white_trans"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />



            <Button
                android:id="@+id/send_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:background="@color/start_shovling"
                android:hint="SEND CODE"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/remember_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/remember_pass"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/text_color"
                    android:textSize="10dp"
                    android:background="@drawable/button_border" />


            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
